--- a/Blog/赵子龙/1.md
+++ b/Blog/赵子龙/1.md
@@ -1,6 +1,29 @@
-# <div style="height:40px"><div style="float:left">eIvy Framework 开发者博客</div> <div style="float:right"><img width="80" height="40" src="../../Logo.png"></img></div></div>
+# <div style="height:40px"><div style="float:left">eIvy Framework 开发者博客</div> <div style="float:right"><img width="80" height="40" src="../../Logo.png"></img></div></div>  
 
-xxxxxx
+常见的javascript伪链接经常用在href和onclick等事件属性上
 
+# 用在href中
+在a标签的href中要注意href伪链接执行的动作是在别的动作执行完成后才执行的，如果想禁止href后动作的执行需要前面有一个Flase的返回值。
+# 用在onclick等事件中
+## 例如：
+```
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <input type="submit" onclick="javascript: Submit();">
+</body>
+<script>
+function Submit() {
+      alert("你真好看！");  
+}
+</script>
+</html>
+```
+执行上述代码后会弹出&emsp;*你真好看*&emsp这句话。
 ---
 &emsp; &copy; eIvy Framework 2019.
