--- a/Blog/赵子龙/1.md
+++ b/Blog/赵子龙/1.md
@@ -24,6 +24,6 @@ function Submit() {
 </script>
 </html>
 ```
-执行上述代码后会弹出&emsp;*你真好看*&emsp这句话。
----
+执行上述代码后会弹出*你真好看*这句话。
+
 &emsp; &copy; eIvy Framework 2019.
