--- a/Blog/赵子龙/1.md
+++ b/Blog/赵子龙/1.md
@@ -3,7 +3,36 @@
 常见的javascript伪链接经常用在href和onclick等事件属性上
 
 # 用在href中
-在a标签的href中要注意href伪链接执行的动作是在别的动作执行完成后才执行的，如果想禁止href后动作的执行需要前面有一个Flase的返回值。
+## 例如：
+```
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <a href="javascript: Submit()">弹出</a>
+</body>
+<script>
+function Submit() {
+      alert("******");  
+}
+</script>
+</html>
+```
+执行上述代码后会弹出******
+## 在a标签的href中要注意href伪链接执行的动作是在别的动作执行完成后才执行的(IE6除外)，如果想禁止href后动作的执行需要前面有一个Flase的返回值。  
+要想禁止href动作的执行可以采用如下的方式  
+```
+<a href="javascript: Submit()" onclick="SubmitT();return false;">弹出</a>
+```
+或
+```
+<a href="javascript: Submit()" onclick="SubmitT();event.returnValue=false;">弹出</a>
+```
+这两种方式都可以只执行SubmitT事件,不执行Sumbit事件
 # 用在onclick等事件中
 ## 例如：
 ```
@@ -19,11 +48,11 @@
 </body>
 <script>
 function Submit() {
-      alert("你真好看！");  
+      alert("*****");  
 }
 </script>
 </html>
 ```
-执行上述代码后会弹出*你真好看*这句话。
+执行上述代码后会弹出*****
 
 &emsp; &copy; eIvy Framework 2019.
