--- a/Blog/霍紫燕/总结.md
+++ b/Blog/霍紫燕/总结.md
@@ -1,3 +1,67 @@
-# 总结  
+# <div style="height:40px"><div style="float:left">eIvy Framework 开发者博客</div> <div style="float:right"><img width="80" height="40" src="../../Logo.png"></img></div></div>
 
-111111  
+## ECharts绘制图表获取数据方式 
+
+通常情况要生成图表所需数据是不能完全列举出来的，不管表格中所需数据如何变化，都应能获取所有数据生成图表，在框架中，可有两种方式可以获取数据来生成图表。  
+
+### 1、通过调用SQL脚本来获取数据，例如：获取车间名称和各车间总定员数  
+
+```
+// 异步加载数据
+eIvy.ajax('GET',
+    '~/HttpHandlers/SqlScriptInvoker.ashx?executor=DataTable&amp;formatter=ColumnTaking&amp;name=SumWorkshopUnitStaffAndExist&amp;params={ID:-1,ThemeID:(@Request[ThemeID]),SubfirmID:(@Request[SubfirmID]),WorkUnitName:"'+ x +'"}&amp;fn=S',
+    function(data, status) {
+        data = JSON.parse(data);
+        myChart1.setOption({
+            xAxis: {
+                data: data.ShortName //车间名称
+            },
+            series: [{
+                name: '定员数',
+                type: 'bar',
+                data: data.CapacityCount //各车间总定员数
+            }]
+        });
+    },
+    function(error) {
+        alert(error);
+    });
+```
+其中name=SumWorkshopUnitStaffAndExist为脚本名
+    params={ID:-1,ThemeID:(@Request[ThemeID]),SubfirmID:(@Request[SubfirmID]),WorkUnitName:"'+ x +'"}用于向SQL脚本传递相应的参数  
+注：SQL脚本需配置功能
+该方式使用比较方便，并且任何情况都可以使用  
+具体生成图表方法参见[利用 ECharts 和 SQL 脚本绘制图形](http://39.104.72.86/Articles/DispArticle?ID=124&Source=%2fArticles%2fFrameworkKnowList)
+
+### 2、通过遍历表格行将数据存入数组中，例如：如以下视图
+
+<img src="Photo/1.png" />
+
+则可以通过以下方式来获取：  
+```
+    var tab=document.getElementById("Source");//获取表格id
+    var rows=tab.rows;
+    console.log(rows.length);//获取表格的行数
+    var WorkUnitName=[];
+    var CapacityCount=[];
+    var ExistCount=[];
+    for(var i=1 ; i &lt; rows.length ; i++){ //遍历表格的行
+        WorkUnitName[i]=rows[i].cells[2].innerHTML;  //获取第三列数据，即站段名
+        CapacityCount[i]=rows[i].cells[3].innerHTML;  
+        ExistCount[i]=rows[i].cells[4].innerHTML;
+    }
+    WorkUnitName.splice(0,1)
+    CapacityCount.splice(0,1)
+    ExistCount.splice(0,1)
+
+    console.log(WorkUnitName)
+    console.log(CapacityCount)
+    console.log(ExistCount)
+```
+其中：console.log() 方法用于在控制台输出信息，该方法对于开发过程进行测试很有帮助。  
+splice() 方法用于添加或删除数组中的元素。  
+注：该方法不适用于需要多表中的数据、需对数据进行汇总等情况，且该表格中的字段顺序不能改变。  
+生成图表方法参见[ECharts](https://echarts.apache.org/)
+
+---
+&emsp; &copy; eIvy Framework 2019.
